Sync Pearl cooldown to Combat cooldown action bar, Added config time system