@@ -10,12 +10,11 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ConfigUpdater {
     private final String currentVersion;
     private final JavaPlugin plugin;
-    private static final String CONFIG_VERSION_KEY = "config-version";
+    private static final String CONFIG_VERSION_KEY = "config_version";
 
     public ConfigUpdater(JavaPlugin plugin) {
         this.plugin = plugin;
@@ -46,16 +45,27 @@ public class ConfigUpdater {
         plugin.getLogger().info("Updating config from version " + configVersionStr + " to " + currentVersion);
 
         try {
-            File backupFile = new File(plugin.getDataFolder(), "config_backup_" + configVersionStr + ".yml");
-            Files.copy(configFile.toPath(), backupFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-
             Map<String, Object> userValues = flattenConfig(currentConfig);
 
+            // Create temp file with new default config
             File tempFile = new File(plugin.getDataFolder(), "config_new.yml");
-            createDefaultConfigWithHeader(tempFile); // Create the new default config with the header
+            createDefaultConfigWithHeader(tempFile);
 
             FileConfiguration newConfig = YamlConfiguration.loadConfiguration(tempFile);
             newConfig.set(CONFIG_VERSION_KEY, currentVersion);
+
+            // Check if there are actual differences before creating backup
+            boolean configDiffers = hasConfigDifferences(userValues, newConfig);
+
+            if (configDiffers) {
+                File backupFile = new File(plugin.getDataFolder(), "config_backup_" + configVersionStr + ".yml");
+                Files.copy(configFile.toPath(), backupFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                plugin.getLogger().info("Config backup created at " + backupFile.getName());
+            } else {
+                plugin.getLogger().info("No significant config changes detected, skipping backup creation");
+            }
+
+            // Apply user values and save
             applyUserValues(newConfig, userValues);
             newConfig.save(configFile);
             tempFile.delete();
@@ -67,49 +77,64 @@ public class ConfigUpdater {
         }
     }
 
+    /**
+     * Determines if there are actual differences between old and new config
+     */
+    private boolean hasConfigDifferences(Map<String, Object> userValues, FileConfiguration newConfig) {
+        // Get all paths from new config (excluding config_version)
+        Map<String, Object> newConfigMap = flattenConfig(newConfig);
+
+        // Check for removed or changed keys
+        for (Map.Entry<String, Object> entry : userValues.entrySet()) {
+            String path = entry.getKey();
+            Object oldValue = entry.getValue();
+
+            // Skip config_version key
+            if (path.equals(CONFIG_VERSION_KEY)) continue;
+
+            // Check if path no longer exists
+            if (!newConfig.contains(path)) {
+                return true; // Found a removed path
+            }
+
+            // Check if default value changed
+            Object newDefaultValue = newConfig.get(path);
+            if (newDefaultValue != null && !newDefaultValue.equals(oldValue)) {
+                return true; // Default value changed
+            }
+        }
+
+        // Check for new keys
+        for (String path : newConfigMap.keySet()) {
+            if (!path.equals(CONFIG_VERSION_KEY) && !userValues.containsKey(path)) {
+                return true; // Found a new path
+            }
+        }
+
+        return false; // No significant differences
+    }
+
     private void createDefaultConfigWithHeader(File destinationFile) {
         try (InputStream in = plugin.getResource("config.yml")) {
             if (in != null) {
                 List<String> defaultLines = new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8))
                         .lines()
-                        .collect(Collectors.toList());
+                        .toList();
 
                 List<String> newLines = new ArrayList<>();
                 newLines.add("# Configuration version - Do not modify this value");
-                newLines.add("config-version: " + currentVersion);
+                newLines.add(CONFIG_VERSION_KEY + ": " + currentVersion);
                 newLines.add("");
                 newLines.addAll(defaultLines);
 
                 Files.write(destinationFile.toPath(), newLines, StandardCharsets.UTF_8);
             } else {
                 plugin.getLogger().warning("Default config.yml not found in the plugin's resources.");
-                // You might want to create an empty config file here or handle this differently
                 destinationFile.createNewFile();
             }
         } catch (IOException e) {
             plugin.getLogger().severe("Failed to create default config with header: " + e.getMessage());
             e.printStackTrace();
-        }
-    }
-
-    private void saveResource(String resourcePath, File destination) throws IOException {
-        InputStream in = plugin.getResource(resourcePath);
-        if (in == null) {
-            throw new FileNotFoundException("Resource not found: " + resourcePath);
-        }
-
-        if (!destination.exists()) {
-            destination.createNewFile();
-        }
-
-        try (OutputStream out = Files.newOutputStream(destination.toPath())) {
-            byte[] buf = new byte[1024];
-            int len;
-            while ((len = in.read(buf)) > 0) {
-                out.write(buf, 0, len);
-            }
-        } finally {
-            in.close();
         }
     }
 
@@ -119,7 +144,7 @@ public class ConfigUpdater {
     private Map<String, Object> flattenConfig(ConfigurationSection config) {
         Map<String, Object> result = new HashMap<>();
         for (String key : config.getKeys(true)) {
-            if (!key.equals(CONFIG_VERSION_KEY) && !config.isConfigurationSection(key)) {
+            if (!config.isConfigurationSection(key)) {
                 result.put(key, config.get(key));
             }
         }
@@ -133,6 +158,10 @@ public class ConfigUpdater {
         for (Map.Entry<String, Object> entry : userValues.entrySet()) {
             String path = entry.getKey();
             Object value = entry.getValue();
+
+            // Don't override config_version
+            if (path.equals(CONFIG_VERSION_KEY)) continue;
+
             if (newConfig.contains(path)) {
                 newConfig.set(path, value);
             } else {
